--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,10 @@ jobs:
     steps:
       - run:
           name: install Dependencies
-          command: l
-          lscpu 
-          echo hello
+          command: 1
+              lscpu
+              echo hello
+          
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
